# Netease_Arrange

./: .gitignore  README.md  pyproject.toml
netease_arrange/: Api.py  Depository.py  JsonDataFile.py  LocalSong.py  Netease.py  Paths.py  Record.py  Song.py  Sync.py  __init__.py  constant.py  util.py
netease_arrange/raw_api/: __init__.py  decrypt.py  rawapi.py
