[tool.poetry]
name = "netease_arrange"
version = "1.0.0"
description = "Netease_Arrange helps you organize your music files from netease."
license = "MIT"
authors = ["aoout <wuz66280@gmail.com>"]
readme = 'README.md'


[tool.poetry.dependencies]
python = "^3.9"
pycryptodomex = "^3.14.1"
requests = "^2.27.1"
munch = "^2.5.0"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"